syntax = "proto3";

service InventoryService {
    rpc SearchAllProducts(Empty) returns (ProductsResponse) {}
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse) {}
}

message Empty{}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 quantity = 3;
    float price = 4;
    string photo = 5;
    string author = 6;
    bool inStock = 7;
}

message ProductsResponse {
    repeated ProductResponse products = 1;
}

message UpdateStockRequest {
    int32 bookId = 1;
    int32 newQuantity = 2;
}

message UpdateStockResponse {
    bool success = 1;
    string message = 2;
}
